<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_padding_small">


        <Button
            android:id="@+id/btn_modify_app_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_application_settings"
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/btn_modify_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_modify_profile"
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/chef"
            android:layout_marginStart="@dimen/activity_padding_big"
            android:layout_marginEnd="@dimen/activity_padding_big"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_records_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_records_number"
                android:layout_margin="@dimen/activity_padding"/>

            <TextView
                android:id="@+id/tv_likes_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_likes_number"
                android:layout_margin="@dimen/activity_padding"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/chef"
            android:layout_marginStart="@dimen/activity_padding_big"
            android:layout_marginEnd="@dimen/activity_padding_big"/>


        <TextView
            android:id="@+id/tv_offer_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_offer_type"
            android:layout_margin="@dimen/activity_padding"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/chef"
            android:layout_marginStart="@dimen/activity_padding_big"
            android:layout_marginEnd="@dimen/activity_padding_big"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_help"
                android:gravity="start|center"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>

            <Button
                android:id="@+id/btn_legal_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_legal_notice"
                android:gravity="start|center"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/chef"
            android:layout_marginStart="@dimen/activity_padding_big"
            android:layout_marginEnd="@dimen/activity_padding_big"/>


        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_disconnect"
            android:gravity="start|center"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>
</ScrollView>