<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button_template_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_login_text"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button_template_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_signin_text"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button_template_mainactivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_mainactivity_text"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button_template_ad_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_adactivity_text"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>